[package]
name    = "web"
edition = "2024"
version = "0.1.0"
authors = ["Mumtahin Farabi <mfarabi619@gmail.com>"]

[dependencies]
dioxus.workspace            = true
tracing.workspace           = true
lucide-dioxus.workspace     = true
dioxus-sdk-time.workspace   = true
dioxus-primitives.workspace = true
urlencoding                 = "2.1"
ui.path                     = "../libs/ui"
use-mdbook.path             = "../libs/use-mdbook"
serde                       = { version = "1.0.163", features = ["derive"] }
serde_json                  = "1"
web-sys                     = { version = "0.3", features = ["console", "FormData", "File", "Navigator", "Clipboard", "Storage"] }
wasm-bindgen-futures        = "0.4"
reqwest                     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gloo-timers                 = { version = "0.3", features = ["futures"] }
gloo-net                    = { version = "0.6", features = ["websocket"] }
futures-util                = { version = "0.3", default-features = false, features = ["sink"] }
js-sys                      = "0.3"

[features]
default = ["web"]
web     = ["dioxus/web"]
mobile  = ["dioxus/mobile"]
server  = ["dioxus/server"]
desktop = ["dioxus/desktop"]

[build-dependencies]
dioxus-autofmt.version = "0.7.3"
syn                    = "2.0.98"
prettyplease           = "0.2.36"
mdbook-shared.path     = "../libs/mdbook-shared"
mdbook-gen             = { path ="../libs/mdbook-gen", features = ["manganis"] }
