[package]
name = "embedded"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "../../libs/firmware/build.rs"

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
log = "0.4"
zephyr = "0.1.0"
firmware = { path = "../../libs/firmware" }
cfg-if = "1.0"

[build-dependencies]
zephyr-build = "0.1.0"
