[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
default-run = "tui"

[lib]
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "tui"
path = "bin/tui/main.rs"

# Carried over from vlcn sqlite-rs-embedded: vlcn's source cfg-gates on
# `feature = "static"` (engine linked into the same image, our case) vs
# `feature = "loadable_extension"` (runtime .so plugin, not applicable to
# embedded). `omit_load_extension` mirrors SQLITE_OMIT_LOAD_EXTENSION in
# sqlite_config.h — keep them in sync.
[features]
default = ["static", "omit_load_extension"]
static = []
loadable_extension = []
omit_load_extension = []

[dependencies]
time   = { version = "0.3.45", default-features = false }
cfg-if = "1.0"
log    = "0.4"
libm   = "0.2"

[target.'cfg(target_arch = "xtensa")'.dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr"] }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
static_cell = "2.1"

embassy-time = { version = "0.4.0", features = ["tick-hz-100"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-2048"] }
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }

mousefood = { version = "0.5", default-features = false, features = ["fonts", "blink"] }
ratatui = { workspace = true, default-features = false, features = ["all-widgets"] }
embedded-graphics = { version = "0.8", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui          = { workspace = true, features = ["all-widgets", "layout-cache"] }
ratzilla         = "0.3.0"
critical-section = { version = "1", features = ["std"] }

[target.'cfg(not(any(target_arch = "xtensa", target_arch = "wasm32")))'.dependencies]
ratatui                     = { workspace = true, features = ["crossterm", "all-widgets"] }
crossterm                   = "0.29.0"
mousefood                   = { version = "0.5", features = ["fonts", "blink"] }
embedded-graphics           = "0.8"
embedded-graphics-simulator = "0.8"
tui-big-text                = "0.8"

[build-dependencies]
bindgen = "0.71"
zephyr-build = "0.1.0"

[package.metadata.trunk.build]
inject_scripts = true
release        = true
filehash       = false
dist           = "dist"
minify         = "always"
target         = "index.html"
