[package]
edition     = "2024"
version     = "0.1.0"
default-run = "microtop"
name        = "microtop"

[dependencies]
serde.workspace      = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json.workspace = true
crossterm            = "0.29.0"
throbber-widgets-tui = "0.11.0"
tui-tree-widget      = "0.24.0"
embedded-graphics-simulator = "0.8.0"
mousefood            = { version = "0.5.0", features = ["blink"] }
ratatui              = { workspace = true, features = [ "serde", "crossterm" ] }
reqwest              = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.wasm32-unknown-unknown.dependencies]
web-time             = "1.1.0"
ratzilla             = "0.3.0"
color-eyre           = "0.6.5"
wasm-bindgen-futures = "0.4.55"
clap                 = { version = "4.6.0", features = ["derive"] }
gloo-net             = { version = "0.6.0", features = ["http", "json"] }
ratatui              = { workspace = true, features = [ "all-widgets", "layout-cache" ] }
rand                 = { version = "0.9.2", features = ["small_rng"], default-features = false }
tachyonfx            = { version = "0.23.0",  features = ["wasm", "web-time"], default-features = false, }
