[package]
publish = false
edition = "2024"
version = "0.1.0"
name = "server"
default-run = "loco"
license = "GNU GPL 3.0"

[[bin]]
name = "loco"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.26"
loco-rs = { workspace = true, features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }

[dependencies]
serde.workspace = true
loco-rs.workspace = true
serde_json.workspace = true
chrono = "0.4"
circular-buffer = "1"
include_dir = "0.7"
scalar_api_reference = "0.2"
colored_json = "5"
validator = "0.20"
axum = "0.8.1"
unic-langid = "0.9.4"
regex = "1.11.1"
tracing = "0.1.40"
async-trait = "0.1.74"
migration.path = "migration"
loco-openapi = { version = "0.1", features = ["full"] }
serial = "0.4"
uuid = { version = "1.6.0", features = ["v4"] }
axum-extra = { version = "0.12", features = ["form"] }
fluent-templates = { version = "0.14", features = ["tera"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tokio = { version = "1.33.0", default-features = false, features = [
    "rt-multi-thread",
] }
sea-orm = { version = "1.1.19", features = [
    "macros",
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
crc32fast = "1.4"
vedirect_rs = "0.2.2"
