[package]
name = "tui"
edition = "2024"
version = "0.1.0"
default-run = "tui"

[[bin]]
name = "tui"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde.workspace = true
serde_json.workspace = true
crossterm = "0.29.0"
tachyonfx = "0.25.0"
embedded-graphics-simulator = "0.8.0"
rand = "0.10"
mousefood = { version = "0.5.0", features = ["blink"] }
ratatui = { workspace = true, features = ["serde", "crossterm"] }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }

[target.wasm32-unknown-unknown.dependencies]
serde.workspace = true
web-time = "1.1.0"
ratzilla = "0.3.0"
color-eyre = "0.6.5"
critical-section = { version = "1", features = ["std"] }
ratatui = { workspace = true, features = ["all-widgets", "layout-cache"] }
rand = { version = "0.10", default-features = false }
tachyonfx = { version = "0.25.0", default-features = false, features = [
    "wasm",
    "web-time",
] }
