[package]
name = "web"
edition = "2024"
version = "0.1.0"
license = "GNU GPL 3.0"

[dependencies]
web-time = "1.1.0"
ratzilla = "0.0.4"
color-eyre = "0.6.3"
clap = { version = "4.5.23", features = ["derive"] }
ratatui = { version = "0.29.0", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
tachyonfx = { version = "0.15.0", default-features = false, features = ["web-time"] }
