[package]
name    = "web"
edition = "2024"
version = "0.1.0"
authors = ["Mumtahin Farabi <mfarabi619@gmail.com>"]

[dependencies]
dioxus.workspace            = true
tracing.workspace           = true
lucide-dioxus.workspace     = true
dioxus-sdk-time.workspace   = true
dioxus-primitives.workspace = true
urlencoding                 = "2.1"
ui.path                     = "../../libs/web/ui"
use-mdbook.path             = "../../libs/web/use-mdbook"
serde                       = { version = "1.0.163", features = ["derive"] }
serde_json                  = "1"
web-sys                     = { version = "0.3", features = ["console", "FormData", "File", "Navigator", "Clipboard", "Storage", "Blob", "BlobPropertyBag", "Url", "HtmlElement", "HtmlInputElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData", "ImageBitmap", "Document", "Window", "ScrollIntoViewOptions", "ScrollBehavior", "Element"] }
wasm-bindgen-futures        = "0.4"
wasm-bindgen                = "0.2"
reqwest                     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
gloo-timers                 = { version = "0.3", features = ["futures"] }
js-sys                      = "0.3"
dioxus-provider             = "0.2"

[features]
default = ["web"]
web     = ["dioxus/web"]
mobile  = ["dioxus/mobile"]
server  = ["dioxus/server"]
desktop = ["dioxus/desktop"]

[[bin]]
name = "e2e"
path = "bin/e2e/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
playwright-rs = { git = "https://github.com/padamson/playwright-rust", rev = "1594a73cf1cfa7c8c7a56e4f90d2fff2d0cfb595", features = ["screenshot-diff"] }
regex         = "1"
tokio         = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
dioxus-autofmt.version = "0.7.3"
syn                    = "2.0.98"
prettyplease           = "0.2.36"
mdbook-shared.path     = "../../libs/web/mdbook-shared"
mdbook-gen             = { path ="../../libs/web/mdbook-gen", features = ["manganis"] }
