# https://www.lcdwiki.com/2.8inch_ESP32-32E_Display
[package]
publish     = false
edition     = "2024"
version     = "0.1.0"
name        = "esp32-no-std-demo"
default-run = "esp32-no-std-demo"

[[bin]]
name        = "esp32-no-std-demo"
harness     = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[[bin]]
name        = "minimal"
path        = "src/bin/minimal.rs"
harness     = false

[dependencies]
log              = "0.4.27"
mipidsi          = "0.10.0"
esp-alloc        = "0.9.0"
embedded-hal-bus = "0.3.0"
critical-section = "1.2.0"
ratatui          = { version = "0.30.0", default-features = false, features = ["all-widgets"] }
time             = { version = "0.3.45", default-features = false }
libm             = "0.2.16"
tui-big-text     = "0.8.2"
esp-println      = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-hal          = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }
mousefood        = { version = "0.5.0", default-features = false, features = ["fonts"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
